@@ -743,6 +743,7 @@ To translate:
   'D (for Deployed)'  => 'D',
   'P (for Published)' => 'P',
   'You cannot add a note to "[_1]" because it is not checked out to you' => 'You cannot add a note to "[_1]" because it is not checked out to you',
+  'Could not create a thumbnail for [_1]: [_2]' => 'Could not create a thumbnail for [_1]: [_2]',
 
 Notice:
 
